--- a/Question-2-3-webform.html
+++ b/Question-2-3-webform.html
@@ -27,16 +27,21 @@
     </head>
     <body>
         <h1>Feedback form</h1>
-    <form>
+    <form aria-labelledby="formHeading">
+      <!-- Added an ID to link the heading to the form -->
         <div class="control">
-          <label>Full name <span class="required">*</span></label><input id="name" name="name" type="text" />
+          <!-- Associated the label with input using for and id -->
+          <!-- Added aria-required to indicate required field -->
+          <label for="name">Full name <span class="required">*</span></label><input id="name" name="name" type="text" aria-required="true" />
         </div>
         <div class="control">
-          <label>Biography</label><textarea id="biography" name="biography" type="text"></textarea>
-          <span>Include examples on your skills in JavaScript.</span>
+          <!-- Added aria-describedby for extra instructions -->
+          <label for="biography">Biography</label><textarea id="biography" name="biography" type="text" aria-describedby="bioExample"></textarea>
+          <span id="bioExample">Include examples on your skills in JavaScript.</span>
         </div>
         
-          <div>Gender</div>
+        <!-- Grouped radio buttons under a fieldset with legend for better context -->
+          <legend>Gender</legend>
           <div class="control">
             <input id="gender_male" name="gender" type="radio" value="male" /><label>Male</label>
           </div>
@@ -45,7 +50,8 @@
           </div>
         
         <div class="control">
-          <input id="accept_agbs" name="accept_agbs" type="checkbox" value="1" /><label>I accept the terms and conditions</label>
+          <!-- Added aria-required for checkbox to indicate requirement -->
+          <input id="accept_agbs" name="accept_agbs" type="checkbox" value="1" aria-required="true" /><label for="accept_agbs">I accept the terms and conditions</label>
         </div>
         <div class="control">
           <input name="validate" type="hidden" value="1" /><input type="submit" value="Register" />
