--- a/Question-2-3-webform.html
+++ b/Question-2-3-webform.html
@@ -44,15 +44,16 @@
         <!-- Grouped radio buttons under a fieldset with legend for better context -->
           <legend>Gender</legend>
           <div class="control">
-            <input id="gender_male" name="gender" type="radio" value="male" /><label>Male</label>
+            <input id="gender_male" name="gender" type="radio" value="male" /><label for="gender_male">Male</label>
           </div>
           <div class="control">
-            <input id="gender_female" name="gender" type="radio" value="female" /><label>Female</label>
+            <input id="gender_female" name="gender" type="radio" value="female" /><label for="gender_female">Female</label>
           </div>
         
         <div class="control">
           <!-- Added aria-required for checkbox to indicate requirement -->
-          <input id="accept_agbs" name="accept_agbs" type="checkbox" value="1" aria-required="true" /><label for="accept_agbs">I accept the terms and conditions</label>
+          <!-- Added span class="required" for checkbox -->
+          <input id="accept_agbs" name="accept_agbs" type="checkbox" value="1" aria-required="true" /><label for="accept_agbs">I accept the terms and conditions<span class="required">*</span></label>
         </div>
         <div class="control">
           <input name="validate" type="hidden" value="1" /><input type="submit" value="Register" />
